--- a/style.css
+++ b/style.css
@@ -1,11 +1,270 @@
-* {
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+
+*{
+  font-family: 'Nunito',sans-serif;
+  margin: 0; padding: 0;
+  box-sizing: border-box;
   text-decoration: none;
-  margin: 0px;
-  padding: 0px;
+  text-transform: capitalize;
+  transition: .2s linear;
 }
-body {
-  display: grid;
-  width: auto;
-  height: auto;
+
+html{
+  font-size: 62.5%;
+}
+
+section{
+  padding: 2rem 9%;
+}
+
+/* header */
+.header{
+  position: fixed;
+  top: 0; left: 0; right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 9%;
+  z-index: 2;
+  background-color: #fafafa;
+  opacity: 50%;
+}
+
+h1 {
+  color: #333;
+  font-size: 32px;
+  font-weight: 500;
+}
+
+h6{
+  color: #333;
+  font-size: 22px;
+  font-weight: 300;
+  justify-content: center;
+  text-align: center;
+
+  padding: 150px;
+}
+
+.header .logo img{
+  height: 6rem;
+}
+
+.header .navbar #close{
+  display: none;
+  position: absolute;
+  top: 4rem;
+  right: 2rem;
+  cursor: pointer;
+  font-size: 3rem;
+  color: #ffffff;
+}
+
+.header .navbar a{
+  font-size: 2rem;
+  margin-right: 2rem;
+  color: black;
+}
+
+.header .navbar a:hover{
+  color: #d3ad7f;
+}
+
+.header #menu{
+  display: none;
+  cursor: pointer;
+  font-size: 2.5rem;
+  color: #fff;
+}
+
+/* ends */
+
+
+/* home */
+.home{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.664);
+  margin-top: 150px;
+}
+
+.home .content{
+  flex: 1 1 40rem;
+  padding-top: 6.5rem;
+}
+
+.home .content .title{
+  font-size: 5rem;
+  color: #a01f1f;
+  text-transform: uppercase;
+}
+
+.home .content .title span{
+  text-transform: uppercase;
+  color: #c0b3a3;
+}
+
+.home .content .description{
+  font-size: 2rem;
+  font-weight: lighter;
+  line-height: 1.8;
+  padding: 1rem 0;
+  color: #a01f1f;
+}
+
+.home .content .btn{
+  margin-top: 1rem;
+  display: inline-block;
+  padding: .9rem 3rem;
+  font-size: 1.7rem;
+  color: #fff;
+  background: #d3ad7f;
+  cursor: pointer;
+}
+
+.home .content .btn:hover{
+  letter-spacing: .2rem;
+}
+
+.home .image{
+  flex: 1 1 40rem;
+} 
+
+.home .image img{
+  width: 100%;
+}
+/* end */
+
+/* table */
+.knowledge{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff0000;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 50%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  } */
+
+  /* end
+
+/* map */
+#mainMap {
+  display: flex;
+  justify-content: center;
+}
+
+.mainmap {
+  width: 100%;
+}
+
+.titleMap {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  padding-top: 100px;
+}
+
+.map:hover {
+  stroke: #a01f1f;
+  fill: #ff0000;
+}
+
+/* end */
+
+.testmap1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 55px;
+}
+
+.mapSumatera {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Jam */
+.homea{
+  margin-top: 125px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+}
+
+.content1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.iWatch {
+  font-size: large;
+  text-align: center;
+  justify-content: center;
+  color: rgb(85, 41, 41);
+}
+
+.displayWatch{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-top: 75px;
+}
+
+.watch {
+  display: flex;
+  flex-direction: column;
+  font-size: medium;
+  align-items: center;
+  justify-content: center;
+  max-width: 500px;
+  margin: auto;
+  height: 100px;
+  padding: 100px;
+}
+
+.watch:hover {
+  background-color: #bebebe;
+}
+/* end */
+
+/* contact */
+.icont{
+  height: 250px;
+  border-top: 2px solid black;
+}
+/* end */
+
+.icont{
+  display: flex;
+  gap: 20px;
+  justify-content: end;
   align-items: center;
 }
